Updated Mod to Game v. 1.12.0-pre.12. New CVarryCapacity v. 0.4.7-rc.1. Created Mutton and Porkchops Dry and Flour. With the corresponding methods to add to food bowl and create salted and add to Drying rack for the dry. Also grinding properties for the quern and Mortar and Pestle. Fixed new recipe style. Added entries to language files.

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -44,6 +44,57 @@
   "block-bonfire-extinct": "Bonfire (Extinct)" ,
   "block-bonfire-lit": "Bonfire (Lit)" ,
   
+  	"block-food-bowl-small-blue-porkchops-raw": "Food Bowl Small Blue Porkchops (Raw)",
+	"block-food-bowl-medium-blue-porkchops-raw": "Food Bowl Medium Blue Porkchops (Raw)",
+	"block-food-bowl-large-blue-porkchops-raw": "Food Bowl Large Blue Porkchops (Raw)",
+	"block-food-bowl-small-brown-porkchops-raw": "Food Bowl Small Brown Porkchops (Raw)",
+	"block-food-bowl-medium-brown-porkchops-raw": "Food Bowl Medium Brown Porkchops (Raw)",
+	"block-food-bowl-large-brown-porkchops-raw": "Food Bowl Large Brown Porkchops (Raw)",
+	"block-food-bowl-small-fire-porkchops-raw": "Food Bowl Small Fire Porkchops (Raw)",
+	"block-food-bowl-medium-fire-porkchops-raw": "Food Bowl Medium Fire Porkchops (Raw)",
+	"block-food-bowl-large-fire-porkchops-raw": "Food Bowl Large Fire Porkchops (Raw)",
+	"block-food-bowl-small-red-porkchops-raw": "Food Bowl Small Red Porkchops (Raw)",
+	"block-food-bowl-medium-red-porkchops-raw": "Food Bowl Medium Red Porkchops (Raw)",
+	"block-food-bowl-large-red-porkchops-raw": "Food Bowl Large Red Porkchops (Raw)",
+	"block-food-bowl-small-blue-porkchops-salted": "Food Bowl Small Blue Porkchops (Salted)",
+	"block-food-bowl-medium-blue-porkchops-salted": "Food Bowl Medium Blue Porkchops (Salted)",
+	"block-food-bowl-large-blue-porkchops-salted": "Food Bowl Large Blue Porkchops (Salted)",
+	"block-food-bowl-small-brown-porkchops-salted": "Food Bowl Small Brown Porkchops (Salted)",
+	"block-food-bowl-medium-brown-porkchops-salted": "Food Bowl Medium Brown Porkchops (Salted)",
+	"block-food-bowl-large-brown-porkchops-salted": "Food Bowl Large Brown Porkchops (Salted)",
+	"block-food-bowl-small-fire-porkchops-salted": "Food Bowl Small Fire Porkchops (Salted)",
+	"block-food-bowl-medium-fire-porkchops-salted": "Food Bowl Medium Fire Porkchops (Salted)",
+	"block-food-bowl-large-fire-porkchops-salted": "Food Bowl Large Fire Porkchops (Salted)",
+	"block-food-bowl-small-red-porkchops-salted": "Food Bowl Small Red Porkchops (Salted)",
+	"block-food-bowl-medium-red-porkchops-salted": "Food Bowl Medium Red Porkchops (Salted)",
+	"block-food-bowl-large-red-porkchops-salted": "Food Bowl Large Red Porkchops (Salted)",
+	"totemsblock-peltboartrophy-east": "Peltboartrophy",
+	"block-food-bowl-small-blue-mutton-raw": "Food Bowl Small Blue Mutton (Raw)",
+	"block-food-bowl-medium-blue-mutton-raw": "Food Bowl Medium Blue Mutton (Raw)",
+	"block-food-bowl-large-blue-mutton-raw": "Food Bowl Large Blue Mutton (Raw)",
+	"block-food-bowl-small-brown-mutton-raw": "Food Bowl Small Brown Mutton (Raw)",
+	"block-food-bowl-medium-brown-mutton-raw": "Food Bowl Medium Brown Mutton (Raw)",
+	"block-food-bowl-large-brown-mutton-raw": "Food Bowl Large Brown Mutton (Raw)",
+	"block-food-bowl-small-fire-mutton-raw": "Food Bowl Small Fire Mutton (Raw)",
+	"block-food-bowl-medium-fire-mutton-raw": "Food Bowl Medium Fire Mutton (Raw)",
+	"block-food-bowl-large-fire-mutton-raw": "Food Bowl Large Fire Mutton (Raw)",
+	"block-food-bowl-small-red-mutton-raw": "Food Bowl Small Red Mutton (Raw)",
+	"block-food-bowl-medium-red-mutton-raw": "Food Bowl Medium Red Mutton (Raw)",
+	"block-food-bowl-large-red-mutton-raw": "Food Bowl Large Red Mutton (Raw)",
+	"block-food-bowl-small-blue-mutton-salted": "Food Bowl Small Blue Mutton (Salted)",
+	"block-food-bowl-medium-blue-mutton-salted": "Food Bowl Medium Blue Mutton (Salted)",
+	"block-food-bowl-large-blue-mutton-salted": "Food Bowl Large Blue Mutton (Salted)",
+	"block-food-bowl-small-brown-mutton-salted": "Food Bowl Small Brown Mutton (Salted)",
+	"block-food-bowl-medium-brown-mutton-salted": "Food Bowl Medium Brown Mutton (Salted)",
+	"block-food-bowl-large-brown-mutton-salted": "Food Bowl Large Brown Mutton (Salted)",
+	"block-food-bowl-small-fire-mutton-salted": "Food Bowl Small Fire Mutton (Salted)",
+	"block-food-bowl-medium-fire-mutton-salted": "Food Bowl Medium Fire Mutton (Salted)",
+	"block-food-bowl-large-fire-mutton-salted": "Food Bowl Large Fire Mutton (Salted)",
+	"block-food-bowl-small-red-mutton-salted": "Food Bowl Small Red Mutton (Salted)",
+	"block-food-bowl-medium-red-mutton-salted": "Food Bowl Medium Red Mutton (Salted)",
+	"block-food-bowl-large-red-mutton-salted": "Food Bowl Large Red Mutton (Salted)",
+
+  
   "block-food-bowl-small-blue-raw": "Food Bowl Small Blue (Raw)",
   "block-food-bowl-medium-blue-raw": "Food Bowl Medium Blue (Raw)",
   "block-food-bowl-large-blue-raw": "Food Bowl Large Blue (Raw)",
@@ -105,8 +156,8 @@
   "blockdesc-food-bowl-*-meat-fruitfat": "Sneak Right click with bowls of honey to finalize Pemmican",
   "blockdesc-food-bowl-*-pemmican*": "Sneak Right click with sausage casings to get Pemmican Sausages",
   
-  "item-flour-dryfruit": "Flour (Dryfruit)",
-  "item-flour-redmeat-dry": "Flour Redmeat (Dry)",
+  "item-flour-dryfruit": "Dry Fruit Flour",
+  "item-flour-meat-dry": "Dry Meat Flour",
   "item-redmeat-salted": "Redmeat (Salted)",
   "item-redmeat-dry": "Redmeat (Dry)",
   "item-dryfruit-blueberry": "Dryfruit (Blueberry)",
