palm tree overhaul

--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -2063,14 +2063,14 @@
 	"block-palmfrond-1-placed-*": "Palm Frond ",
 	"block-palmfrond-2-placed-*": "Palm Frond ",
 	"block-palmfrond-3-placed-*": "Palm Frond ",
-	"block-palmfruits-bananna-*": "Bananna",
+	"block-palmfruits-bananna-*": "Banana",
 	"block-palmfruits-coconut-*": "Coconut",
 	"block-palmlog-bottom-placed": "Palm Log Bottom ",
 	"block-palmlog-middle-placed": "Palm Log Middle ",
 	"block-palmlog-top-placed": "Palm Log Top ",
 	"block-palmlog-tip-placed": "Palm Log Tip ",
 	"block-palmlog-*": "Palm Log ",
-	"block-tropicalfruits-bananna-*": " Bananna",
+	"block-tropicalfruits-bananna-*": " Banana",
 	"block-tropicalfruits-coconut-*": "Coconut",
 	"block-tropicalfruits-coconutbroken-*": "Coconut broken",
 	"block-tropicalfruits-coconutshell-*": "Coconut shell",
