Fixed spear recipe error.

--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -1408,44 +1408,44 @@
   "itemdesc-animal-tendon": "Use any knife to create Sinew (grid)",
 
   "item-byproducts-sinew": "Sinew",
-  "itemdesc-byproducts-sinew": "Used as cordage in immersive crafting, Used to craft Sinew Fibers and  bowlimbs.",
+  "itemdesc-byproducts-sinew": "Place any hammer above Sinew (grid). Used to craft glue and Sinew Thread (grid).",
   "item-byproducts-sinew-fibers": "Sinew Fibers ",
   "itemdesc-byproducts-sinew-fibers": "Hammered from strips. Combine 6 over a bowl then put in a fire to make glue. Or craft 3 horizontally to make Sinew Thread.",
   "item-byproducts-sinew-thread": "Sinew Thread ",
-  "itemdesc-byproducts-sinew-thread": "Crafted from 3 Sinew Fibers. Combine 6 Sinew Threads vertically to make a rope. Or combine 3 Sinew Thread and 2 Sinew to make bowstring with loops.  Future uses, sewing thread, fishing line.",
+  "itemdesc-byproducts-sinew-thread": "Place 3 Sinew Fibers in a horizontal row (grid). Used to craft Sinew Rope and Bowstring. (Future uses: sewing thread, fishing line)",
   "item-byproducts-rope": "rope ",
-  "itemdesc-byproducts-rope": "Crafted from 6 threads. Currently no use except crafting equally useless lasso. Combine 4 in the top right corner and 1 on the left bottom to make a long lasso with a loop.",
+  "itemdesc-byproducts-rope":  "Crafted from 6 Sinew threads (Grid, 2 columns of 3). Currently no use. (Future Use: lasso.)" ,
   "item-byproducts-lasso": "lasso ",
-  "itemdesc-byproducts-lasso": "Crafted from 5 rope. Currently no use.",
+  "itemdesc-byproducts-lasso": "Assemble a 2 x 2 Square of Sinew Thread in the top right corner and 1 on the left bottom of the grid.",
   "item-byproducts-bowstring": "Bowstring ",
-  "itemdesc-byproducts-Fixedng": "Crafted from 2 strips and 3 threads. Combine with stick for a simple vanilla bow. Or combine with crafted limbs to make bows. Carved limb, composite limb, recurve limbs are craftable.",
+  "itemdesc-byproducts-bowstring": "Crafted from 2 sinew and 3 sinew threads (Grid). Combine with stick for vanilla bow or crafted limbs to make immersion bows: carved, composite, recurve.",
   "item-animal-horn": "Animal Horn",
-  "itemdesc-animal-horn": "Carve with a knife to get horn slabs which can be used to make advanced composite and recurve bows. Future use include tool handles and trade goods.",
+  "itemdesc-animal-horn": "Use any knife to craft horn slabs (grid). (Future Use: tool handles and trade goods.)",
   "item-byproducts-bowlfiber": "Fibers in a bowl",
-  "itemdesc-byproduct-bowlfiber": " Crafted from 6 sinew fibers and a bowl. Cook in a fire pit to make glue. Glue is used for advanced crafting of composite and recurve bows. Future uses of glue include any tool construction.",
+  "itemdesc-byproduct-bowlfiber": "Place 6 sinew fibers above a bowl in the grid. Used to make glue in a fire pit.",,
   "item-byproducts-glue": "Glue",
-  "itemdesc-byproducts-glue": "From cooking fibers in a bowl. Glue is used for advanced crafting of composite and recurve bows. Future uses of glue include any tool construction.",
+  "itemdesc-byproducts-glue": "Crafted by heating sinew fibers in a bowl. Used for crafting composite and recurve bowlimbs. (Future uses of glue include other tool assembly.)",
   "item-byproducts-hornslab": "Horn Slab",
-  "itemdesc-byproducts-hornslab": "Cut from an animal horn. Used to make advanced composite and recurve bows. Future use include tool handles and trade goods.",
+  "itemdesc-byproducts-hornslab": "Use any knife above the horn to carve horn slabs (grid). Used to craft composite and recurve bowlimbs. (Future use: tool handles and trade goods.)",,
   "item-fletching-*": "Fletching for arrows",
-  "itemdesc-fletching-*": "Not used yet.  A knife with feather, bamboo or vine will create the respective fletching. Could add immersion and alternate materials.",
+  "itemdesc-fletching-*":  "Not yet implemented.  A knife with feather, bamboo or vine will create fletching. Future: add immersion and alternate materials.",
 	
   "block-sapling-sisal": "Sisal Sapling",
   "block-crop-sisal-*": "Growing Sisal",
   "block-crop-sisal-5": "Mature Sisal",
   "block-crop-sisal-6": "Mature Flowered Sisal",
-  "blockdesc-crop-sisal-*": "Not Mature Yet, will give One leaf, Use a Knife",
-  "blockdesc-crop-sisal-5": "Mature Sisal, Not Flowering Yet, will give some leaves, but not Seeds, Use a Knife",
-  "blockdesc-crop-sisal-6": "Ready to Harvest, Will Give Plenty of Leaves and Seeds, Use a Knife",
+  "blockdesc-crop-sisal-*": "Immature. Use any knife to harvest one leaf.",
+  "blockdesc-crop-sisal-5": "Almost Mature Sisal. Use a knife to harvest leaves, this plant will not provide seeds.",
+  "blockdesc-crop-sisal-6": "Flowering Sisal. Ready to Harvest. Use a knife to harvest many leaves and a few seeds.",
   
   "item-sisal-fibers": "Sisal Fibers",
   "item-sisal-thread": "Sisal Thread",
   "item-sisal-twine": "Sisal Twine",
   "item-sisal-rope": "Sisal Rope",  
 
-  "itemdesc-sisal-fibers": "Put 3 in a row to make Sisal Thread",
-  "itemdesc-sisal-thread": "Arrange in the grid 2 in row under 2 in row. Like a square to make Twine",
-  "itemdesc-sisal-twine": "Fill the grid, 3 x 3 to make 3 Ropes",
+  "itemdesc-sisal-fibers": "Place 3 in a row to craft Sisal Thread (grid)",,
+  "itemdesc-sisal-thread": "Crafted from sisal fiber. Arrange in a 2 X 2 square to craft Sisal Twine (grid).",
+  "itemdesc-sisal-twine": "Used as cordage in immersive crafting. Used to make Sisal Rope",
   "itemdesc-sisal-rope": "Sisal Rope",
 
   "block-burdenbasket": "Burden Basket",
@@ -1466,7 +1466,7 @@
   "blockdesc-leavesbranchy-*-kapok": "Must use an axe to break",  
   
   "block-giantreed-arundo-*-normal": "Arundo donax - Giant Reed",
-  "blockdesc-giantreed-arundo-*-normal": "Use a knife to harvest a root that can be planted",
+  "blockdesc-giantreed-arundo-*-normal": "Use a knife to harvest reed bundles and edible roots",,
   
   "item-animal-small-bones": "Pile of Small Bones",
   "itemdesc-animal-small-bones": "Future use for fertilizers.",
